Update style.css, fixing the overflow problem

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -114,3 +114,5 @@ html {
     font-size: 16px;
   }
 }
+
+.container{overflow-x:hidden}
